--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,10 @@
   margin-bottom: 20px;
 }
 
-#map {
+#createCompanyAccount #map {
   margin-bottom: 20px;
+}
+
+#companyProfile h1{
+  margin-bottom: 40px;
 }
