fix email already in database bug and the company profile bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,10 @@
   margin-bottom: 20px;
 }
 
+#createCompanyAccount button{
+  margin-bottom: 30px;
+}
+
 #companyProfile h1{
   margin-bottom: 40px;
 }
