Finalize design for login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,7 +175,7 @@ section#partners:before {
 COMPANY
  -----*/
 
-#createCompanyAccount {
+#createCompanyAccount, #login {
     margin-top: 150px;
 }
 
